0.9.20
 * Simplified the main interface
 * Tunnels can now be edited
 * Material design improvements
 * Better support for tablets
 * Bug fixes and translation updates

0.9.19.1 / 2015-04-15 / ed86e7e85161dbe3f15932fd4d195c551f8e2c71
 * Fixed crash when opening advanced settings

0.9.19 / 2015-04-13 / 3cfb748946a5876dc06d5f81d811b142a88846f7
 * Made internal state handling more stable
 * Added graceful shutdown support
 * Updated libjbigi to use GMP 6.0.0
 * New libjbigi binary for armeabi-v7a to speed up newer devices
 * Improved logging
 * Bug fixes and translation updates

0.9.18 / 2015-03-04 / c2f4831a1617f4ce716a08640446fdd992c751ff
 * I2P can start automatically when phone boots (configure in Setting)
 * Updated browser configuration guides for Orfox and Firefox
 * Tunnels for postman's mail server added to defaults (for new installs)
 * Settings options for configuring UDP and TCP ports
 * Bug fixes and translation updates

0.9.17.1 / 2014-12-14 / cd8bb5e3ac4238efac12179c78c4fa517fcaabec
 * Fixed crashes in addressbook and netDb status page
 * Fixed crash when opening an IRC client tunnel
 * Updated translations

0.9.17 / 2014-12-01 / bcf947f433876f643e0f6dff81aac88848b797d3
 * Migrated to the new Material design from Android Lollipop
 * Added a browser configuration guide
 * Improved the help screen
 * Upgraded the I2P router to 0.9.17
 * Various bug fixes and translation updates

0.9.15.1 / 2014-10-16 / 9cc4e80134cf9becb3838ed3cc78e0bed1363165
 * Fixed a configuration bug

0.9.15 / 2014-10-16 / 9b51f78b791c28a580d57f1a5019c94493de6231
 * Upgraded the I2P router to 0.9.15
 * Added a help screen with some basic information
 * Logs can now be copied to the clipboard
 * Various user interface improvements and fixes