@@ -3,6 +3,7 @@
 
     <string name="app_name">I2P</string>
     <string name="desc_i2p_logo">I2P logo</string>
+    <string name="choose_language">Choose language</string>
     <string name="welcome_new_install">Welcome to I2P! This app is ALPHA software and it does not provide strong anonymity. Please read the release notes and license information.</string>
     <string name="welcome_new_version">New version installed. Please read the release notes. Version:</string>
 
